# SMTCLyrics

./: .gitignore  README.md
.VSCodeCounter/2026-05-23_01-14-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-23_13-42-26/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-23_15-50-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-24_00-19-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.local.json
cpp/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  resource.aps  resource.rc
cpp/src/: main.cpp  readme.md  resource.h
cpp/src/app/: Application.cpp  Application.h
cpp/src/cache/: Cache.cpp  Cache.h
cpp/src/config/: Config.cpp  Config.h
cpp/src/http/: HttpClient.cpp  HttpClient.h
cpp/src/lyrics/: LrcParser.cpp  LrcParser.h  LyricRepository.cpp  LyricRepository.h  OnlineLyrics.cpp  OnlineLyrics.h  QrcDecrypter.cpp  QrcDecrypter.h
cpp/src/smtc/: SmtcProvider.cpp  SmtcProvider.h
cpp/src/ui/: ControlWindow.cpp  ControlWindow.h  DesktopLyricsWindow.cpp  DesktopLyricsWindow.h
cpp/src/util/: Base64.cpp  Base64.h  Encoding.cpp  Encoding.h  Inflate.cpp  Inflate.h  Path.cpp  Path.h
cpp/tests/: core_tests.cpp
e/: SMTCget1.cpp  SMTCget2.cpp  config.ini  zyJson3.1.5.ec  彗星歌词显示模块.e  彗星歌词显示模块2.ec  歌词显示模块_演示.bak  歌词显示模块_演示unicode.bak  歌词显示模块_演示unicode.e
e/unpacked/zyJson3.1.5/: AGENTS.md
e/unpacked/zyJson3.1.5/header/: header.txt
e/unpacked/zyJson3.1.5/project/: .native_symbol_map.json  _meta.json
e/unpacked/zyJson3.1.5/src/: .DLL声明.txt  .全局变量.txt  .数据类型.txt  zyJsonDocument.txt  zyJsonValue.txt  匿名程序集_2.txt  匿名程序集_4.txt  匿名程序集_7.txt
e/unpacked/彗星歌词显示模块/: AGENTS.md  info.json
e/unpacked/彗星歌词显示模块/project/: .module.json  .native_source_map.json  .native_symbol_map.json  _meta.json
e/unpacked/彗星歌词显示模块/src/: .DLL声明.txt  .全局变量.txt  .常量.txt  .数据类型.txt  彗星歌词窗口.txt  核心功能程序集.txt  辅助功能程序集.txt
e/unpacked/彗星歌词显示模块2/: AGENTS.md
e/unpacked/彗星歌词显示模块2/project/: .module.json
e/unpacked/彗星歌词显示模块2/src/: .常量.txt  .数据类型.txt
e/unpacked/歌词显示模块_演示/: AGENTS.md  info.json
e/unpacked/歌词显示模块_演示/ecom/zyJsonValue/: info.json
e/unpacked/歌词显示模块_演示/ecom/zyJsonValue/project/: .module.json
e/unpacked/歌词显示模块_演示/ecom/zyJsonValue/src/: .常量.txt  匿名程序集_5.txt
e/unpacked/歌词显示模块_演示/ecom/彗星歌词显示模块/: info.json
e/unpacked/歌词显示模块_演示/ecom/彗星歌词显示模块/header/: header.txt
e/unpacked/歌词显示模块_演示/ecom/彗星歌词显示模块/project/: .module.json  .native_symbol_map.json  _meta.json
e/unpacked/歌词显示模块_演示/ecom/精易模块/image/: list.json
e/unpacked/歌词显示模块_演示/ecom/精易模块/project/: _meta.json
e/unpacked/歌词显示模块_演示/ecom/精易模块/src/: .全局变量.txt  .常量.txt  ADSL拨号类.txt  匿名程序集_1.txt  匿名程序集_17.txt  匿名程序集_23.txt  匿名程序集_29.txt  匿名程序集_8.txt  普通填表.txt  汇编类.txt  注册表操作Ex.txt  类_CPU信息.txt  类_DOM_数组.txt  类_HOOK_EX.txt  类_InlineHook.txt  类_POST数据类.txt  类_像素组.txt  类_内存.txt  类_内存配置项.txt  类_图片组操作类.txt  类_外部状态条.txt  类_屏蔽菜单.txt  类_时钟.txt  类_树型框_字节集操作.txt  类_桌面窗口管理.txt  类_系统音量.txt  类_脚本组件.txt  类_邮槽客户端.txt  类_配置项ex.txt  类_队列.txt
e/unpacked/歌词显示模块_演示/elib/: 多线程支持库.txt
e/unpacked/歌词显示模块_演示/project/: .module.json  .native_source_map.json  .native_symbol_map.json  _meta.json
e/unpacked/歌词显示模块_演示/src/: .常量.txt  功能型程序.txt  窗口程序集1.txt
e/unpacked/歌词显示模块_演示unicode/: AGENTS.md  info.json
e/unpacked/歌词显示模块_演示unicode/ecom/zyJsonValue/project/: .native_source_map.json
e/unpacked/歌词显示模块_演示unicode/ecom/zyJsonValue/src/: 匿名程序集_1.txt  匿名程序集_3.txt  匿名程序集_6.txt
e/unpacked/歌词显示模块_演示unicode/ecom/彗星歌词显示模块/: info.json
e/unpacked/歌词显示模块_演示unicode/ecom/彗星歌词显示模块/project/: .native_source_map.json
e/unpacked/歌词显示模块_演示unicode/ecom/彗星歌词显示模块/src/: .DLL声明.txt  .全局变量.txt  匿名程序集_1.txt  匿名程序集_2.txt  彗星歌词窗口.txt
e/unpacked/歌词显示模块_演示unicode/ecom/精易模块/header/: header.txt
e/unpacked/歌词显示模块_演示unicode/ecom/精易模块/src/: .DLL声明.txt  .数据类型.txt  内存共享.txt  匿名程序集_11.txt  匿名程序集_15.txt  匿名程序集_18.txt  匿名程序集_22.txt  匿名程序集_24.txt  匿名程序集_26.txt  匿名程序集_31.txt  匿名程序集_35.txt  匿名程序集_36.txt  匿名程序集_5.txt  匿名程序集_6.txt  外部控件操作.txt  外部树型框.txt  外部超级列表框.txt  字节流.txt  正则表达式类.txt  注册表操作.txt  类_APIHOOK.txt  类_HOOK_Send.txt  类_POST数据类_字节集.txt  类_RegExp.txt  类_XMLHTTP.txt  类_位图操作.txt  类_图像格式转换类.txt  类_托盘.txt  类_模块枚举.txt  类_环境存取.txt  类_磁盘信息.txt  类_系统信息.txt  类_线程池.txt  类_识图.txt  类_通用对话框.txt  输入法类.txt
e/unpacked/歌词显示模块_演示unicode/image/: list.json
e/unpacked/歌词显示模块_演示unicode/project/: .module.json  .native_source_map.json  .native_symbol_map.json  _meta.json
e/unpacked/歌词显示模块_演示unicode/src/: .DLL声明.txt  KRC解密.txt  _启动窗口.xml  功能型程序.txt  窗口程序集1.txt
e/unpacked/精易模块[v11.1.5]/: AGENTS.md  info.json
e/unpacked/精易模块[v11.1.5]/project/: .module.json  .native_symbol_map.json
e/unpacked/精易模块[v11.1.5]/src/: HashMap_StrInt.txt  匿名程序集_10.txt  匿名程序集_12.txt  匿名程序集_13.txt  匿名程序集_14.txt  匿名程序集_16.txt  匿名程序集_19.txt  匿名程序集_2.txt  匿名程序集_20.txt  匿名程序集_21.txt  匿名程序集_25.txt  匿名程序集_27.txt  匿名程序集_28.txt  匿名程序集_3.txt  匿名程序集_30.txt  匿名程序集_32.txt  匿名程序集_33.txt  匿名程序集_34.txt  匿名程序集_4.txt  匿名程序集_7.txt  匿名程序集_9.txt  文件拖放.txt  类_Accessible.txt  类_Cookie.txt  类_DOM.txt  类_FTP.txt  类_HTML实体.txt  类_ODBC数据库.txt  类_json.txt  类_任务栏.txt  类_任务栏自身.txt  类_位图处理.txt  类_外部选择夹.txt  类_快速文本.txt  类_日志输出.txt  类_系统服务.txt  类_编辑框菜单.txt  类_编辑框透明.txt  类_超级列表框.txt  类_邮槽服务端.txt  (+2 more)
